--- a/Pipfile
+++ b/Pipfile
@@ -28,9 +28,10 @@ xformers = "*"
 fast-fit = "*"
 setfit = {ref = "dont-use-deprecated-dataset-filter", git = "git+https://github.com/Wauplin/setfit"}
 transformers = "*"
+nvitop = "*"
 
 [dev-packages]
 ipykernel = "*"
 
 [requires]
-python_version = "3.11"
+python_version = "3"
