--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,159 @@
--i https://pypi.org/simple
-annotated-types==0.7.0; python_version >= '3.8'
+accelerate==0.33.0
+aiohttp==3.9.5
+aiosignal==1.3.1
 asttokens==2.4.1
-beautifulsoup4==4.12.3; python_full_version >= '3.6.0'
-blis==0.7.11
+async-timeout==4.0.3
+attrs==23.2.0
+beautifulsoup4==4.12.3
 bs4==0.0.2
-catalogue==2.0.10; python_version >= '3.6'
-certifi==2024.6.2; python_version >= '3.6'
-charset-normalizer==3.3.2; python_full_version >= '3.7.0'
-click==8.1.7; python_version >= '3.7'
-cloudpathlib==0.18.1; python_version >= '3.7'
-colorama==0.4.6; platform_system == 'Windows'
-comm==0.2.2; python_version >= '3.8'
-confection==0.1.5; python_version >= '3.6'
-contourpy==1.2.1; python_version >= '3.9'
-cupy-cuda12x==12.3.0; python_version >= '3.8'
-cycler==0.12.1; python_version >= '3.8'
-cymem==2.0.8
-decorator==5.1.1; python_version >= '3.5'
-executing==2.0.1; python_version >= '3.5'
+cachetools==5.4.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+coloredlogs==15.0.1
+comm==0.2.2
+contourpy==1.2.1
+cuda-python==12.6.0
+cudf-cu12==24.6.1
+cuml-cu12==24.6.1
+cupy-cuda12x==13.2.0
+cycler==0.12.1
+dask==2024.5.1
+dask-cuda==24.6.0
+dask-cudf-cu12==24.6.1
+dask-expr==1.1.1
+datasets==2.20.0
+debugpy==1.8.2
+decorator==5.1.1
+dill==0.3.8
+distlib==0.3.8
+distributed==2024.5.1
+distributed-ucxx-cu12==0.38.0
+einops==0.8.0
+evaluate==0.4.2
+exceptiongroup==1.2.2
+executing==2.0.1
+fast-fit==1.2.1
 fastrlock==0.8.2
-filelock==3.15.4; python_version >= '3.8'
-fonttools==4.53.0; python_version >= '3.8'
-fsspec==2024.6.1; python_version >= '3.8'
-huggingface-hub==0.23.4; python_full_version >= '3.8.0'
-idna==3.7; python_version >= '3.5'
-intel-openmp==2021.4.0
-iprogress==0.4
-ipython==8.26.0; python_version >= '3.10'
-ipywidgets==8.1.3; python_version >= '3.7'
-jedi==0.19.1; python_version >= '3.6'
-jinja2==3.1.4; python_version >= '3.7'
-joblib==1.4.2; python_version >= '3.8'
-jupyterlab-widgets==3.0.11; python_version >= '3.7'
-kiwisolver==1.4.5; python_version >= '3.7'
-langcodes==3.4.0; python_version >= '3.8'
-language-data==1.2.0
-marisa-trie==1.2.0; python_version >= '3.7'
-markdown-it-py==3.0.0; python_version >= '3.8'
-markupsafe==2.1.5; python_version >= '3.7'
-matplotlib==3.9.0; python_version >= '3.9'
-matplotlib-inline==0.1.7; python_version >= '3.8'
-mdurl==0.1.2; python_version >= '3.7'
-mkl==2021.4.0; platform_system == 'Windows'
+filelock==3.15.4
+fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2024.5.0
+huggingface-hub==0.24.1
+humanfriendly==10.0
+idna==3.7
+importlib_metadata==8.2.0
+IProgress==0.4
+ipykernel==6.29.5
+ipython==8.26.0
+ipywidgets==8.1.3
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.11
+kiwisolver==1.4.5
+libucx-cu12==1.15.0.post1
+line_profiler==4.1.3
+llvmlite==0.43.0
+locket==1.0.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
 mpmath==1.3.0
-murmurhash==1.0.10; python_version >= '3.6'
-networkx==3.3; python_version >= '3.10'
-nltk==3.8.1; python_version >= '3.7'
-numpy==1.26.4; python_version >= '3.9'
-packaging==24.1; python_version >= '3.8'
-pandas==2.2.2; python_version >= '3.9'
-parso==0.8.4; python_version >= '3.6'
-pillow==10.4.0; python_version >= '3.8'
-pip==24.1.1; python_version >= '3.8'
-preshed==3.0.9; python_version >= '3.6'
-prompt-toolkit==3.0.47; python_full_version >= '3.7.0'
-pure-eval==0.2.2
-pydantic==2.8.0; python_version >= '3.8'
-pydantic-core==2.20.0; python_version >= '3.8'
-pygments==2.18.0; python_version >= '3.8'
-pymupdf==1.24.7; python_version >= '3.8'
-pymupdfb==1.24.6; python_version >= '3.8'
-pyparsing==3.1.2; python_full_version >= '3.6.8'
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+msgpack==1.0.8
+multidict==6.0.5
+multiprocess==0.70.16
+nest-asyncio==1.6.0
+networkx==3.3
+nltk==3.8.1
+numba==0.60.0
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-ml-py==12.535.161
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.82
+nvidia-nvtx-cu12==12.1.105
+nvitop==1.3.2
+nvtx==0.2.10
+optimum==1.21.2
+packaging==24.1
+pandas==2.2.2
+parso==0.8.4
+partd==1.4.2
+pexpect==4.9.0
+pillow==10.4.0
+pipenv==2024.0.1
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+protobuf==5.27.2
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==16.1.0
+pyarrow-hotfix==0.6
+Pygments==2.18.0
+pylibraft-cu12==24.6.0
+PyMuPDF==1.24.8
+PyMuPDFb==1.24.8
+pynvjitlink-cu12==0.3.0
+pynvml==11.4.1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 pytz==2024.1
-pyyaml==6.0.1; python_version >= '3.6'
-regex==2024.5.15; python_version >= '3.8'
-requests==2.32.3; python_version >= '3.8'
-rich==13.7.1; python_full_version >= '3.7.0'
-safetensors==0.4.3; python_version >= '3.7'
-scikit-learn==1.5.1; python_version >= '3.9'
-scipy==1.14.0; python_version >= '3.10'
-setuptools==70.2.0; python_version >= '3.8'
-shellingham==1.5.4; python_version >= '3.7'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-smart-open==7.0.4; python_version >= '3.7' and python_version < '4.0'
-soupsieve==2.5; python_version >= '3.8'
-spacy[cuda12x,lookups,transformers]==3.7.5; python_version >= '3.7'
-spacy-alignments==0.9.1; python_version >= '3.7'
-spacy-legacy==3.0.12; python_version >= '3.6'
-spacy-loggers==1.0.5; python_version >= '3.6'
-spacy-lookups-data==1.0.5
-spacy-transformers==1.3.5
-srsly==2.4.8; python_version >= '3.6'
+PyYAML==6.0.1
+pyzmq==26.0.3
+raft-dask-cu12==24.6.0
+rapids-dask-dependency==24.6.0
+regex==2024.5.15
+requests==2.32.3
+rich==13.7.1
+rmm-cu12==24.6.0
+safetensors==0.4.3
+scikit-learn==1.5.1
+scipy==1.14.0
+sentence-transformers==3.0.1
+sentencepiece==0.2.0
+setfit @ git+https://github.com/Wauplin/setfit@74bfc124b79c3c2820c465817c5aaa34dafdc5a7
+six==1.16.0
+sortedcontainers==2.4.0
+soupsieve==2.5
 stack-data==0.6.3
-sympy==1.12.1; python_version >= '3.8'
-tbb==2021.13.0
-thinc==8.2.5; python_version >= '3.6'
-threadpoolctl==3.5.0; python_version >= '3.8'
-tokenizers==0.15.2; python_version >= '3.7'
-torch==2.3.1; python_full_version >= '3.8.0'
-tqdm==4.66.4; python_version >= '3.7'
-traitlets==5.14.3; python_version >= '3.8'
-transformers==4.36.2; python_full_version >= '3.8.0'
-typer==0.12.3; python_version >= '3.7'
-typing-extensions==4.12.2; python_version < '3.12'
-tzdata==2024.1; python_version >= '2'
-urllib3==2.2.2; python_version >= '3.8'
-wasabi==1.1.3; python_version >= '3.6'
+sympy==1.13.1
+tblib==3.0.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+toolz==0.12.1
+torch==2.3.1
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.42.4
+treelite==4.1.2
+triton==2.3.1
+typing_extensions==4.12.2
+tzdata==2024.1
+ucx-py-cu12==0.38.0
+ucxx-cu12==0.38.0
+urllib3==2.2.2
+virtualenv==20.26.3
 wcwidth==0.2.13
-weasel==0.4.1; python_version >= '3.7'
-wheel==0.43.0; python_version >= '3.8'
-widgetsnbextension==4.0.11; python_version >= '3.7'
-wrapt==1.16.0; python_version >= '3.6'
+widgetsnbextension==4.0.11
+xformers==0.0.27
+xxhash==3.4.1
+yarl==1.9.4
+zict==3.0.0
+zipp==3.19.2
