--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 accelerate==0.33.0
-aiohttp==3.9.5
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
 aiosignal==1.3.1
 asttokens==2.4.1
 async-timeout==4.0.3
-attrs==23.2.0
+attrs==24.2.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
 cachetools==5.4.0
@@ -23,7 +24,7 @@ dask==2024.5.1
 dask-cuda==24.6.0
 dask-cudf-cu12==24.6.1
 dask-expr==1.1.1
-datasets==2.20.0
+datasets==2.21.0
 debugpy==1.8.2
 decorator==5.1.1
 dill==0.3.8
@@ -34,13 +35,13 @@ einops==0.8.0
 evaluate==0.4.2
 exceptiongroup==1.2.2
 executing==2.0.1
-fast-fit==1.2.1
+fast-fit @ git+https://github.com/ShreyBiswas/fastfit@c7a45a94a2fa814fbee040ea7690bc1b279931d4
 fastrlock==0.8.2
 filelock==3.15.4
 fonttools==4.53.1
 frozenlist==1.4.1
-fsspec==2024.5.0
-huggingface-hub==0.24.1
+fsspec==2024.6.1
+huggingface-hub==0.24.6
 humanfriendly==10.0
 idna==3.7
 importlib_metadata==8.2.0
@@ -77,14 +78,14 @@ nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
 nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
+nvidia-cudnn-cu12==9.1.0.70
 nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
 nvidia-ml-py==12.535.161
 nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.5.82
+nvidia-nvjitlink-cu12==12.6.20
 nvidia-nvtx-cu12==12.1.105
 nvitop==1.3.2
 nvtx==0.2.10
@@ -102,7 +103,7 @@ protobuf==5.27.2
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pyarrow==16.1.0
+pyarrow==17.0.0
 pyarrow-hotfix==0.6
 Pygments==2.18.0
 pylibraft-cu12==24.6.0
@@ -113,15 +114,15 @@ pynvml==11.4.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
-PyYAML==6.0.1
+PyYAML==6.0.2
 pyzmq==26.0.3
 raft-dask-cu12==24.6.0
 rapids-dask-dependency==24.6.0
-regex==2024.5.15
+regex==2024.7.24
 requests==2.32.3
 rich==13.7.1
 rmm-cu12==24.6.0
-safetensors==0.4.3
+safetensors==0.4.4
 scikit-learn==1.5.1
 scipy==1.14.0
 sentence-transformers==3.0.1
@@ -131,19 +132,19 @@ six==1.16.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 stack-data==0.6.3
-sympy==1.13.1
+sympy==1.13.2
 tblib==3.0.0
 termcolor==2.4.0
 threadpoolctl==3.5.0
 tokenizers==0.19.1
 toolz==0.12.1
-torch==2.3.1
+torch==2.4.0
 tornado==6.4.1
-tqdm==4.66.4
+tqdm==4.66.5
 traitlets==5.14.3
-transformers==4.42.4
+transformers==4.44.0
 treelite==4.1.2
-triton==2.3.1
+triton==3.0.0
 typing_extensions==4.12.2
 tzdata==2024.1
 ucx-py-cu12==0.38.0
@@ -153,7 +154,7 @@ virtualenv==20.26.3
 wcwidth==0.2.13
 widgetsnbextension==4.0.11
 xformers==0.0.27
-xxhash==3.4.1
+xxhash==3.5.0
 yarl==1.9.4
 zict==3.0.0
 zipp==3.19.2
