--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,24 @@
 accelerate==0.33.0
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
-aiosignal==1.3.1
-asttokens==2.4.1
-async-timeout==4.0.3
 attrs==24.2.0
-beautifulsoup4==4.12.3
 bs4==0.0.2
 cachetools==5.4.0
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpickle==3.0.0
 coloredlogs==15.0.1
-comm==0.2.2
-contourpy==1.2.1
 cuda-python==12.6.0
 cudf-cu12==24.6.1
 cuml-cu12==24.6.1
 cupy-cuda12x==13.2.0
 cycler==0.12.1
-dask==2024.5.1
-dask-cuda==24.6.0
-dask-cudf-cu12==24.6.1
-dask-expr==1.1.1
+cymem==2.0.8
+Cython==3.0.10
 datasets==2.21.0
-debugpy==1.8.2
-decorator==5.1.1
 dill==0.3.8
-distlib==0.3.8
 distributed==2024.5.1
 distributed-ucxx-cu12==0.38.0
-einops==0.8.0
 evaluate==0.4.2
 exceptiongroup==1.2.2
-executing==2.0.1
 fast-fit @ git+https://github.com/ShreyBiswas/fastfit@c7a45a94a2fa814fbee040ea7690bc1b279931d4
-fastrlock==0.8.2
-filelock==3.15.4
-fonttools==4.53.1
-frozenlist==1.4.1
 fsspec==2024.6.1
 huggingface-hub==0.24.6
 humanfriendly==10.0
@@ -49,28 +28,11 @@ IProgress==0.4
 ipykernel==6.29.5
 ipython==8.26.0
 ipywidgets==8.1.3
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jupyter_client==8.6.2
-jupyter_core==5.7.2
 jupyterlab_widgets==3.0.11
-kiwisolver==1.4.5
 libucx-cu12==1.15.0.post1
 line_profiler==4.1.3
 llvmlite==0.43.0
-locket==1.0.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mpmath==1.3.0
-msgpack==1.0.8
-multidict==6.0.5
 multiprocess==0.70.16
-nest-asyncio==1.6.0
-networkx==3.3
 nltk==3.8.1
 numba==0.60.0
 numpy==1.26.4
@@ -89,72 +51,37 @@ nvidia-nvjitlink-cu12==12.6.20
 nvidia-nvtx-cu12==12.1.105
 nvitop==1.3.2
 nvtx==0.2.10
-optimum==1.21.2
 packaging==24.1
-pandas==2.2.2
-parso==0.8.4
-partd==1.4.2
-pexpect==4.9.0
-pillow==10.4.0
-pipenv==2024.0.1
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
-protobuf==5.27.2
+pandas
 psutil==6.0.0
-ptyprocess==0.7.0
 pure_eval==0.2.3
-pyarrow==17.0.0
-pyarrow-hotfix==0.6
-Pygments==2.18.0
 pylibraft-cu12==24.6.0
 PyMuPDF==1.24.8
 PyMuPDFb==1.24.8
 pynvjitlink-cu12==0.3.0
-pynvml==11.4.1
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
 PyYAML==6.0.2
 pyzmq==26.0.3
-raft-dask-cu12==24.6.0
-rapids-dask-dependency==24.6.0
+referencing==0.35.1
 regex==2024.7.24
-requests==2.32.3
-rich==13.7.1
 rmm-cu12==24.6.0
 safetensors==0.4.4
 scikit-learn==1.5.1
 scipy==1.14.0
 sentence-transformers==3.0.1
 sentencepiece==0.2.0
-setfit @ git+https://github.com/Wauplin/setfit@74bfc124b79c3c2820c465817c5aaa34dafdc5a7
-six==1.16.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-stack-data==0.6.3
 sympy==1.13.2
-tblib==3.0.0
 termcolor==2.4.0
-threadpoolctl==3.5.0
 tokenizers==0.19.1
-toolz==0.12.1
-torch==2.4.0
+torch
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
 transformers==4.44.0
-treelite==4.1.2
 triton==3.0.0
 typing_extensions==4.12.2
-tzdata==2024.1
 ucx-py-cu12==0.38.0
 ucxx-cu12==0.38.0
 urllib3==2.2.2
-virtualenv==20.26.3
-wcwidth==0.2.13
 widgetsnbextension==4.0.11
-xformers==0.0.27
 xxhash==3.5.0
-yarl==1.9.4
-zict==3.0.0
 zipp==3.19.2
