--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
               capabilities: [ gpu ]
     stdin_open: true
     tty: true
+    command: /bin/bash
     ulimits:
       memlock: -1
       stack: 67108864
