--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -10,7 +10,9 @@ ENV PYTHONUNBUFFERED=1
 # Install pip requirements
 COPY requirements.txt .
 RUN python -m pip install --upgrade pip
-RUN python -m pip install -r requirements.txt --extra-index-url=https://pypi.nvidia.com
+
+# just fix and get out, no need to install all the requirements
+# RUN python -m pip install -r requirements.txt --extra-index-url=https://pypi.nvidia.com
 
 
 # don't bother rerunning and freezing requirements, it'll make requirements.txt much more complicated
